Changes in QMPlay2 build 15.07.11:
	- fixed seeking by searching key frames in buffer,
	- fixed playback in live streams,
	- VAApi bugfix,

Changes in QMPlay2 build 15.06.26:
	- better VSync support for OpenGL video output,
	- OpenSLES audio output (for Android),
	- basic OS X support,
	- minor bug fixes,

Zmiany w QMPlay2 build 15.06.06:
	- większy pasek zmiany rozmiaru okien dla ekranów dotykowych,
	- zoom na ekranie dotykowym (pinch gesture),
	- poprawiony odczyt okładek płyt z katalogu,
	- kompatybilność z FFMpeg 2.0 oraz 2.1,
	- AudioCD jako osobny moduł,

Zmiany w QMPlay2 build 15.05.30:
	- poprawa drag and drop na playliście,
	- przyspieszenie ładowania playlisty,
	- poprawa operacji na katalogach,
	- poprawa drobnych błędów,

Zmiany w QMPlay2 build 15.05.10:
	- poprawa wyszukiwania w YouTube,

Zmiany w QMPlay2 build 15.03.28:
	- opuszczenie okna przez mysz w trybie pełnoekranowym powoduje zamknięcie wszystkich widgetów,
	- możliwość wybrania domyślnego języka dla napisów i dźwięku,
	- HttpReader i FileReader zastąpiony przez FFReader,
	- obsługa większej liczby formatów w YouTube,
	- zmiany w domyślnym układzie okienek,
	- FFMpeg nie używa już HttpReader,
	- zmiany w oknie "Informacje",
	- poprawki w napisach pgssub,
	- możliwość zapisania grupy,
	- zgodność z FFMpeg 2.6,
	- poprawa błędów,

Zmiany w QMPlay2 build 14.12.28:
	- poprawione wczytywanie czcionek z katalogu z napisami (nie sa przeszkiwane rekursywnie),
	- główny pasek narzędzi może być oddokowany od głównego okna,
	- poprawiony crash programu skompilowanego z AVResample,
	- poprawione wyświetlanie tytułów YouTube na playliście,
	- poprawa drobnych błędów,

Zmiany w QMPlay2 build 14.12.23:
	- poprawione przerywanie odtwarzania podczas pracy "youtube-dl" oraz z protokołami innymi niż HTTP i HTTPS,
	- możliwość przewijania do tyłu w strumieniach sieciowych bez ponownego łączenia się z serwerem,
	- MPRIS2 obsługuje już nazwy utworów nawet gdy nie zawierają one tytułu,