@@ -46,8 +46,7 @@ int FFDecHWAccel::decode( Packet &encodedPacket, QByteArray &decoded, bool flush
 	if ( frameFinished )
 	{
 		VideoFrame::create( decoded, frame->data, frame->linesize, frame->interlaced_frame, frame->top_field_first );
-		if ( frame->best_effort_timestamp != QMPLAY2_NOPTS_VALUE )
-			encodedPacket.ts = frame->best_effort_timestamp * time_base;
+		decodeLastStep( encodedPacket, frame );
 	}
 	else
 		encodedPacket.ts.setInvalid();
