@@ -106,7 +106,6 @@ bool PCM::read( Packet &decoded, int &idx )
 
 	idx = 0;
 	decoded.duration = decoded.size() / chn / sizeof( float ) / ( double )srate;
-	decoded.hasKeyFrame = true;
 
 	return decoded.size();
 }
