@@ -1,5 +1,6 @@
 Changes in QMPlay2 build 15.07.11:
 	- fixed seeking by searching key frames in buffer,
+	- aspect ratio is now correctly updated,
 	- fixed playback in live streams,
 	- VAApi bugfix,
 
